--- a/WebApplication1_P15/Views/Shared/_Layout.cshtml
+++ b/WebApplication1_P15/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <a asp-action="SignUp" class="btn btn-outline-secondary"><i class="bg-info bi-plus-square"></i></a>
                 </div>
             </div>
         </nav>
